--- a/package.json
+++ b/package.json
@@ -72,50 +72,50 @@
     "test:client": "vitest",
     "test:ssr": "pnpm run test:client --mode ssr",
     "prepublishOnly": "pnpm build",
-    "format": "prettier --ignore-path .gitignore -w \"src/**/*.{js,ts,json,css,tsx,jsx}\" \"dev/**/*.{js,ts,json,css,tsx,jsx}\"",
+    "format": "prettier --ignore-pattern .gitignore -w \"src/**/*.{js,ts,json,css,tsx,jsx}\" \"dev/**/*.{js,ts,json,css,tsx,jsx}\"",
     "lint": "concurrently pnpm:lint:*",
-    "lint:code": "eslint --ignore-path .gitignore --max-warnings 0 src/**/*.{js,ts,tsx,jsx}",
+    "lint:code": "eslint --ignore-pattern .gitignore --max-warnings 0 src/**/*.{js,ts,tsx,jsx}",
     "lint:types": "tsc --noEmit",
     "update-deps": "pnpm up -Li"
   },
   "dependencies": {
     "comma-separated-tokens": "^2.0.3",
-    "property-information": "^6.3.0",
+    "property-information": "^6.5.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "space-separated-tokens": "^2.0.2",
-    "style-to-object": "^0.3.0",
+    "style-to-object": "^1.0.8",
     "unified": "^11.0.5",
-    "unist-util-visit": "^4.1.2",
+    "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.3"
   },
   "peerDependencies": {
     "solid-js": "^1.6.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.3.1",
-    "@types/hast": "^2.3.7",
-    "@types/unist": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "concurrently": "^8.2.2",
-    "esbuild": "^0.18.20",
-    "esbuild-plugin-solid": "^0.5.0",
-    "eslint": "^8.52.0",
+    "@biomejs/biome": "^1.9.3",
+    "@types/hast": "^3.0.4",
+    "@types/unist": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "concurrently": "^9.0.1",
+    "esbuild": "^0.24.0",
+    "esbuild-plugin-solid": "^0.6.0",
+    "eslint": "^9.11.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "jsdom": "^22.1.0",
-    "prettier": "3.0.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "jsdom": "^25.0.1",
+    "prettier": "3.3.3",
     "remark-gfm": "^4.0.0",
-    "solid-js": "^1.8.5",
-    "tsup": "^7.2.0",
-    "tsup-preset-solid": "^2.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-solid": "^2.7.2",
-    "vitest": "^0.33.0"
+    "solid-js": "^1.9.1",
+    "tsup": "^8.3.0",
+    "tsup-preset-solid": "^2.2.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "vite-plugin-solid": "^2.10.2",
+    "vitest": "^2.1.1"
   },
-  "packageManager": "pnpm@8.6.0",
+  "packageManager": "pnpm@9.11.0",
   "engines": {
     "node": ">=18",
     "pnpm": ">=8.6.0"
